# exception

./: .gitignore
.github/workflows/: tests.yml
include/exception/: exception.cppm  exception.hh
share/exception/: exception.cppm
test/: CMakeLists.txt  exception.cc  xmake.lua
tests/: CMakeLists.txt  exception.cc
tests/docker/x86_64-linux-gnu/: Dockerfile
